# src/main/java/com/dxc/ticket/delegate/V1Delegate.java
@@ -5,6 +5,8 @@ import com.dxc.ticket.api.model.Ticket;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
 
+import java.util.List;
+
 @Component
 public class V1Delegate implements V1ApiDelegate {
     @Override
@@ -14,6 +16,16 @@ public class V1Delegate implements V1ApiDelegate {
 
     @Override
     public ResponseEntity<Ticket> getTicketByIdTicket(String idTicket) {
+        return null;
+    }
+
+    @Override
+    public ResponseEntity<String> getTotalBorrowingBook(String idTicket) {
+        return null;
+    }
+
+    @Override
+    public ResponseEntity<List<Ticket>> searchTicketByIsbn(String isbn) {
         return null;
     }
 
